Update issue templates

--- a/.github/ISSUE_TEMPLATE/버그-보고.md
+++ b/.github/ISSUE_TEMPLATE/버그-보고.md
@@ -1,6 +1,6 @@
 ---
-name: 'Bug: '
-about: Create a report to help us improve
+name: 버그 보고
+about: 버그를 발견하면 최대한 자세히 이슈를 작성해주세요.
 title: ''
 labels: ''
 assignees: ''
